--- a/views/home.html
+++ b/views/home.html
@@ -3,9 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mercado Liebre</title>
 </head>
 <body>
+    <header>
+        <img src="/images/logo-mercado-liebre.svg" alt="">
+        <nav>
+            <p>lugar para poner barra de busquedad</p>
+            <p>Comprá en cuotas y sin tarjeta de crédito</p>
+        </nav>
+        <nav>
+            <ul>
+                <li>Ofertas</li>
+                <li>Tiendas Oficiales</li>
+                <li>Vender</li>
+                <li>Ayuda</li>
+
+            </ul>
+        
+            <ul>
+                <li>Creá tu cuenta</li>
+                <li>Ingresá</li>
+                <li>Mis Compras</li>
+
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h3>Basado en tu última visita</h3>
+            <img src="/images/img-cafetera-moulinex.jpg" alt="" width="300">
+            <p>$6.770</p>
+            <p>40% off</p>
+            <h4>Cafetera Moulinex</h4>
+
+            <img src="/images/img-macbook-pro-2019.jpg" alt="" width="300">
+            <p>$230.000</p>
+            <p>20% off</p>
+            <h4>MacBook Pro 2019</h4>
+
+            <img src="/images/img-samsung-galaxy-s10.jpg" alt="" width="300">
+            <p>$70.500</p>
+            <p>10% off</p>
+            <h4>Samsung Galaxy S10</h4>
+
+            <img src="/images/img-tv-samsung-smart.jpg" alt="" width="300">
+            <p>$23.200</p>
+            <p>5% off</p>
+            <h4>SmartTv Samsung 43"</h4>
+
+        </section>
+        <section>
+            <h3>Ofertas</h3>
+            <img src="/images/img-cafetera-moulinex.jpg" alt="" width="300">
+            <p>$6.770</p>
+            <p>40% off</p>
+            <h4>Cafetera Moulinex</h4>
+
+            <img src="/images/img-macbook-pro-2019.jpg" alt="" width="300">
+            <p>$230.000</p>
+            <p>20% off</p>
+            <h4>MacBook Pro 2019</h4>
+
+            <img src="/images/img-samsung-galaxy-s10.jpg" alt="" width="300">
+            <p>$70.500</p>
+            <p>10% off</p>
+            <h4>Samsung Galaxy S10</h4>
+
+            <img src="/images/img-tv-samsung-smart.jpg" alt="" width="300">
+            <p>$23.200</p>
+            <p>5% off</p>
+            <h4>SmartTv Samsung 43"</h4>
+        </section>
+    </main>
+    
+    <footer>
+
+        <section>
+            <h4>Pagá con tarjeta o en efectivo</h4>
+            <span>MercadoLiebreCash tenés cuotas sin</span>
+            <span>interés con tarjeta o efectivo en puntos de</span>
+            <span>pago. ¡Y siempre es seguro!.</span>
+        </section>
+        <section>
+            <h4>Envío gratis desde los $2.500</h4>
+            <span>Solo por estar registrado en Mercado Liebre</span>
+            <span>tenés envío gratis en miles de productos. Es</span>
+            <span>un beneficio de Mercado Puntos.</span>
+        </section>
+        <section>
+            <h4>Seguridad de principio a fin</h4>
+            <span>¿No te gusta? ¡Devolvelo! En Mercado Liebre</span>
+            <span>no hay nada que no puedas hacer, por que estás</span>
+            <span>siempre protegid@.</span>
+            <p>Copyright © 1999-2020 MercadoLiebre S.R.L</p>
+
+        </section>
+       
+    </footer>
     
 </body>
 </html>
