--- a/views/home.html
+++ b/views/home.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercado Liebre</title>
+    <link rel="stylesheet" href="/css/styles.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <script src="https://kit.fontawesome.com/f39583378c.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <header>
-        <img src="/images/logo-mercado-liebre.svg" alt="">
-        <nav>
+    <header class="home">
+        <nav class="header__nav--home">
+            <img src="/images/logo-mercado-liebre.svg" alt="">
             <p>lugar para poner barra de busquedad</p>
-            <p>Comprá en cuotas y sin tarjeta de crédito</p>
+            <p class="header__nav__p"><i class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de
+                crédito</p>
         </nav>
-        <nav>
+        <nav class="header--home__nav--list">
             <ul>
                 <li>Ofertas</li>
                 <li>Tiendas Oficiales</li>
@@ -20,14 +28,17 @@
                 <li>Ayuda</li>
 
             </ul>
-        
+
             <ul>
-                <li>Creá tu cuenta</li>
-                <li>Ingresá</li>
-                <li>Mis Compras</li>
+                <li>Creá tu cuenta <i class="fa-regular fa-id-card"></i></li>
+                <li>Ingresá <i class="fa-solid fa-right-to-bracket"></i></li>
+                <li>Mis Compras <i class="fa-sharp fa-solid fa-basket-shopping"></i></li>
 
             </ul>
         </nav>
+        <div>
+            <i class="fas fa-bars"></i>
+        </div>
     </header>
     <main>
         <section>
@@ -76,31 +87,39 @@
             <h4>SmartTv Samsung 43"</h4>
         </section>
     </main>
-    
-    <footer>
+
+    <footer class="home">
 
         <section>
+            <i class="fa-solid fa-credit-card"></i>
             <h4>Pagá con tarjeta o en efectivo</h4>
-            <span>MercadoLiebreCash tenés cuotas sin</span>
-            <span>interés con tarjeta o efectivo en puntos de</span>
-            <span>pago. ¡Y siempre es seguro!.</span>
-        </section>
-        <section>
-            <h4>Envío gratis desde los $2.500</h4>
-            <span>Solo por estar registrado en Mercado Liebre</span>
-            <span>tenés envío gratis en miles de productos. Es</span>
-            <span>un beneficio de Mercado Puntos.</span>
-        </section>
-        <section>
-            <h4>Seguridad de principio a fin</h4>
-            <span>¿No te gusta? ¡Devolvelo! En Mercado Liebre</span>
-            <span>no hay nada que no puedas hacer, por que estás</span>
-            <span>siempre protegid@.</span>
-            <p>Copyright © 1999-2020 MercadoLiebre S.R.L</p>
+            <p>MercadoLiebreCash tenés cuotas sin</p>
+            <p>interés con tarjeta o efectivo en puntos de</p>
+            <p>pago. ¡Y siempre es seguro!.</p>
+           </section>
 
+           <section>
+            <i class="fa-solid fa-gift"></i>
+            <h4>Envío gratis desde los $2.500</h4>
+            <p>Solo por estar registrado en Mercado Liebre</p>
+            <p>tenés envío gratis en miles de productos. Es</p>
+            <p>un beneficio de Mercado Puntos.</p>
         </section>
-       
+           
+        <section>
+            <i class="fa-solid fa-user-shield"></i>
+            <h4>Seguridad de principio a fin</h4>
+            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre</p>
+            <p>no hay nada que no puedas hacer, por que estás</p>
+            <p>siempre protegid@.</p>
+        </section>
+
+        <section class="footer--final">
+            <h6>Copyright © 1999-2020 MercadoLiebre S.R.L</h6>
+        </section>
+
     </footer>
-    
+
 </body>
+
 </html>
