--- a/views/home.html
+++ b/views/home.html
@@ -37,53 +37,54 @@
             </ul>
         </nav>
         <div>
-            <i class="fas fa-bars"></i>
+            <i class="fas fa-bars fa-lg"></i>
         </div>
     </header>
     <main>
+        <img src="/images/img-home-banner.jpg" alt="">
         <section>
             <h3>Basado en tu última visita</h3>
-            <img src="/images/img-cafetera-moulinex.jpg" alt="" width="300">
-            <p>$6.770</p>
-            <p>40% off</p>
+            <img src="/images/img-cafetera-moulinex.jpg" alt="">
+            <p class="precio">$6.770</p>
+            <p class="descuento">40% off</p>
             <h4>Cafetera Moulinex</h4>
 
-            <img src="/images/img-macbook-pro-2019.jpg" alt="" width="300">
-            <p>$230.000</p>
-            <p>20% off</p>
+            <img src="/images/img-macbook-pro-2019.jpg" alt="">
+            <p class="precio">$230.000</p>
+            <p class="descuento">20% off</p>
             <h4>MacBook Pro 2019</h4>
 
-            <img src="/images/img-samsung-galaxy-s10.jpg" alt="" width="300">
-            <p>$70.500</p>
-            <p>10% off</p>
+            <img src="/images/img-samsung-galaxy-s10.jpg" alt="" >
+            <p class="precio">$70.500</p>
+            <p class="descuento">10% off</p>
             <h4>Samsung Galaxy S10</h4>
 
-            <img src="/images/img-tv-samsung-smart.jpg" alt="" width="300">
-            <p>$23.200</p>
-            <p>5% off</p>
+            <img src="/images/img-tv-samsung-smart.jpg" alt="" >
+            <p class="precio">$23.200</p>
+            <p class="descuento">5% off</p>
             <h4>SmartTv Samsung 43"</h4>
 
         </section>
         <section>
             <h3>Ofertas</h3>
-            <img src="/images/img-cafetera-moulinex.jpg" alt="" width="300">
-            <p>$6.770</p>
-            <p>40% off</p>
+            <img src="/images/img-cafetera-moulinex.jpg" alt="" >
+            <p class="precio">$6.770</p>
+            <p class="descuento">40% off</p>
             <h4>Cafetera Moulinex</h4>
 
-            <img src="/images/img-macbook-pro-2019.jpg" alt="" width="300">
-            <p>$230.000</p>
-            <p>20% off</p>
+            <img src="/images/img-macbook-pro-2019.jpg" alt="" >
+            <p class="precio">$230.000</p>
+            <p class="descuento">20% off</p>
             <h4>MacBook Pro 2019</h4>
 
-            <img src="/images/img-samsung-galaxy-s10.jpg" alt="" width="300">
-            <p>$70.500</p>
-            <p>10% off</p>
+            <img src="/images/img-samsung-galaxy-s10.jpg" alt="" >
+            <p class="precio">$70.500</p>
+            <p class="descuento">10% off</p>
             <h4>Samsung Galaxy S10</h4>
 
-            <img src="/images/img-tv-samsung-smart.jpg" alt="" width="300">
-            <p>$23.200</p>
-            <p>5% off</p>
+            <img src="/images/img-tv-samsung-smart.jpg" alt="" >
+            <p class="precio">$23.200</p>
+            <pc class="descuento">5% off</pc>
             <h4>SmartTv Samsung 43"</h4>
         </section>
     </main>
